syntax = "proto3";

package market;

// protoc-gen-go 版本大于1.4.0, proto文件需要加上go_package,否则无法生成
option go_package = "./market";

message MarketReq {
  string ip = 1;
  string symbol = 2;
}
message SymbolThumbRes{
  repeated CoinThumb list = 1;
}
message CoinThumb {
  string symbol = 1;
  double open = 2;
  double high= 3;
  double low = 4;
  double close = 5;
  double chg = 6;
  double change = 7;
  double volume = 8;
  double turnover = 9;
  double lastDayClose = 10;
  double usdRate = 11;
  double baseUsdRate = 12;
  double zone = 13;
  int64 dateTime = 14;
  repeated double trend = 15;
}

message ExchangeCoin {
  int64 id = 1;
  string symbol = 2;
  int64 baseCoinScale = 3;
  string baseSymbol = 4;
  int64 coinScale = 5;
  int64 enable = 6;
  double fee = 7;
  int64 sort = 8;
  int64 EnableMarketBuy = 9;
  int64 EnableMarketSell = 10;
  double MinSellPrice = 11;
  int64 Flag = 12;
  int64 MaxTradingOrder = 13;
  int64 MaxTradingTime = 14;
  int64 MinTurnover = 15;
  int64 ClearTime = 16;
  int64 EndTime = 17;
  int64 Exchangeable = 18;
  double MaxBuyPrice = 19;
  double MaxVolume = 20;
  double MinVolume = 21;
  double PublishAmount = 22;
  double PublishPrice = 23;
  int64 PublishType = 24;
  int64 RobotType = 25;
  int64 StartTime = 26;
  int64 Visible = 27;
  int64 Zone = 28;
}

service Market {
  rpc FindSymbolThumbTrend(MarketReq) returns(SymbolThumbRes);
  rpc FindSymbolInfo(MarketReq) returns(ExchangeCoin);
}